# Takumi

./: .gitignore  Cargo.toml  LICENSE  README.MD  README.md  config.toml
crates/minecraft_packet/: Cargo.toml
crates/minecraft_packet/src/: connection.rs  error.rs  lib.rs  reader.rs  state.rs  writer.rs
crates/minecraft_packet/src/packet/: mod.rs  raw.rs
crates/minecraft_packet/src/packets/: mod.rs
crates/minecraft_packet/src/packets/configuration/: acknowledge_finish_configuration.rs  client_information.rs  finish_configuration.rs  mod.rs  plugin_message.rs
crates/minecraft_packet/src/packets/handshaking/: handshake.rs  mod.rs
crates/minecraft_packet/src/packets/login/: cookie_response_login.rs  encryption_response.rs  login_acknowledged.rs  login_plugin_response.rs  login_start.rs  login_success.rs  mod.rs
crates/minecraft_packet/src/packets/status/: mod.rs  ping_request.rs  ping_response.rs  status_request.rs  status_response.rs
crates/takumi_macros/: Cargo.toml
crates/takumi_macros/src/: lib.rs
src/: main.rs
src/config/: mod.rs
src/configuration/: mod.rs
src/player/: connected.rs  handshake.rs  mod.rs  registry.rs
src/protocol/: codec.rs  mod.rs  packet.rs  packets.rs  reader.rs  types.rs  writer.rs
src/protocol/packets/: handshake.rs  mod.rs  transfer.rs
src/proxy/: connection.rs  login.rs  mod.rs  status.rs
src/server/: backend.rs
takumi/: Cargo.toml
takumi/src/: main.rs
