[package]
name = "takumi"
version = "0.1.0"
edition = "2024"
authors = ["Axeno"]
description = "A high-performance Minecraft proxy server written in Rust."
readme = "README.md"
license = "GPL-3.0"

[[bin]]
name = "takumi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cfb8 = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"
dashmap = "6"
async-trait = "0.1"
flate2 = "1"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
